# wiki-corpus

./: Cargo.toml  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs  tests.rs
wiki-corpus-grammar/: Cargo.toml  wiki-exp.par
wiki-corpus-grammar/src/: tests.rs  wiki_parser.rs
wiki-corpus-parser/: Cargo.toml
wiki-corpus-parser/src/: lib.rs
wiki-parser/: Cargo.toml  build.rs  wiki.par
wiki-parser/src/: lib.rs  wiki_grammar.rs  wiki_grammar_trait.rs
