[workspace]
resolver = "2"
members = ["parser", "wiki-parser", "cli"]

[workspace.package]
version = "1.0.0"
authors = ["akitenkrad"]
repository = "https://github.com/akitenkrad/wiki-corpus.git"
license = "MIT"
description = "Extract text from Wikipedia dumps (.bz2) and convert it to JSONLines format."

[workspace.dependencies]
parser = { path = "parser", version = "1.0.0" }
wiki_parser = { path = "wiki-parser", version = "1.0.0" }
anyhow = ">=1.0.93"
indicatif = ">=0.17.9"
libm = ">=0.2.11"
regex = ">=1.11.1"
reqwest = ">=0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = ">=1.41.1"

[workspace.metadata.release]
tag = false
