[package]
name = "cli"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive", "unstable-doc"] }
parser = { workspace = true }

[[bin]]
name = "wiki-corpus"
path = "src/main.rs"
