[package]
name = "cli"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
parser = { workspace = true }
clap = { version = "4.5.21", features = ["cargo", "derive", "unstable-doc"] }

[[bin]]
name = "wiki-corpus"
path = "src/main.rs"

[package.metadata.release]
tag = true
tag-prefix = ""
