[package]
name = "wiki_corpus_grammar"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true


[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
parol_runtime = { version = "1.0.1", features = ["auto_generation"] }
thiserror = "2.0.3"

[build-dependencies]
parol = "1.0.2"
parol_runtime = { version = "1.0.1", features = ["auto_generation"] }

[package.metadata.release]
tag = false
